:Date: $Date$
:Revision: $Revision$
:Web site: https://docutils.sourceforge.io/
:Copyright: This document has been placed in the public domain.

.. contents::

Changes Since 0.18b1
====================

Will be merged on release.

* docutils/nodes.py

  - Don't change a list while looping over it (in
    document.set_name_id_map()). Thanks to Mickey Endito.

* docutils/parsers/rst/directives/misc.py

  - Fix bug #424 Wrong circular inclusion detection.
    Use a "magic" comment instead of line numbers
    to keep a log of recursive inclusions.

* docutils/parsers/rst/states.py

  -  Use a "magic" comment to update the log of recursive inclusions.

* docutils/writers/html5_polyglot/__init__.py

  - New option "image_loading". Support "lazy" loading of images.
    Obsoletes "embed_images".


Release 0.18b1 (2021-10-05)
===========================

* docutils/frontend.py

  - The default value for the "auto_id_prefix" setting changed to "%":
    auto-generated IDs use the tag name as prefix.

* docutils/nodes.py

  - Make meta__ a standard Docutils doctree node. Writers may ignore
    "meta" nodes if they are not supported by the output format.

    __ docs/ref/doctree.html#meta

  - document.make_id(): Do not strip leading number and hyphen characters
    from `name` if the id_prefix setting is non-empty.

  - ``Node.traverse()`` returns an iterator instead of a list.

* docutils/parsers/rst/directives/html.py

  - Removed. (Meta directive moved to ``misc.py``.)

* docutils/parsers/rst/directives/misc.py

  - `Meta` directive class (moved from html.py) inserts `meta`
    (instead of `pending`) nodes.

  - Add `class` option to `Raw` directive.

* docutils/parsers/rst/directives/tables.py:

  - Unify behaviour of `"widths" option`_: check that the length of an
    integer list equals the number of table columns also for the "table"
    directive.

* docutils/tools/math/math2html.py,
  docutils/tools/math/tex2unicode.py,
  docutils/writers/html5/math.css
